--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Favicon Is Not Set CHECKED-OUT 🤚 -->
-  <link rel="icon" type="image/png" href="../public/images/logo.png">
+  <link rel="icon" type="image/png" href="assets\logo.png">
 </head>
 <body style="font-family: 'Poppins', serif;">
   <app-root></app-root>
